--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -1369,11 +1369,8 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
 }
 
 #organization_portal {
-  padding: 8px 8px 0 8px;
+  padding: 8px 15px;
   
-  .header{
-    
-  }
   .body{
     text-align: center;
     margin: 10px 0 0 0;
@@ -1401,12 +1398,15 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
       
       h3 {margin-bottom: 15px;}
       
-      .button { width:185px; padding: 7px 3px 7px 1px; text-shadow: none; font-size: 13px;}
+      .button { width:185px; padding: 7px 3px 7px 1px; text-shadow: none; font-size: 13px; display: block; margin: 15px auto; }
       .button img { height:30px; }
       .landingbuttontext { font-weight: regular; color: #636363;}
+      .text_field { margin-bottom: 3px; }
+      .submit_button { width: auto; font-size: 14px; padding: 3px 10px; margin-bottom: 5px;}
     }
   }
 }
+
 
 .finish_page {
   img {width:85px; height:116px; margin:0; display: inline-block; vertical-align: top;}
