--- a/app/views/groups/signup/form.html.haml
+++ b/app/views/groups/signup/form.html.haml
@@ -3,7 +3,7 @@
   .container.body { padding: 0; background-color: transparent;   }
   .aboutcontainer{ width: 760px; background: rgba(36, 72, 109, 0.8); border-radius: 0; margin-top:27px;}
   .aboutbox { border-radius: 0; padding: 20px; }
-  .errors { color: red; font-size: 17px; }
+  .errors { color: red; font-size: 17px; margin-top: 10px; }
   .error-field { box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6); }
   
 :javascript
@@ -33,7 +33,7 @@
       %p{ style: "position: relative; left: 77px; bottom: 10px; float: left; "}
         = link_to "https://stripe.com/help/security", target: "_blank" do
           = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/stripe_solid_clipped.png"
-      = form_for(@new_group, html: { class: "form-horizontal" }, remote: true) do |f|
+      = form_for(@new_group, url: "/groups", method: :post, html: { class: "form-horizontal unspinnable" }, remote: true) do |f|
         - plan = Group::PLAN_TYPES[@new_group.plan_type]
         = f.hidden_field :token
         = f.hidden_field :stripe_token
@@ -49,6 +49,8 @@
         = f.text_field :creator_email, placeholder: "Email...", "data-label" => "your email"
         %label Create a password:
         = f.password_field :creator_password, placeholder: "Password...", "data-label" => "your password"
+        %label Coupon
+        = f.text_field :coupon, placeholder: "Optional..."
         %div{ style: "display: inline-block; width: 64%;"}
           %label{ style: "display: inline-block;"} Card Number
           .checkout_tt1
@@ -67,5 +69,6 @@
         %span /
         %input{ type: "text", size: 4, maxlength: 4, data: { stripe: "exp-year", label: "card expiration year" }, placeholder: "YYYY", class: "input-small", style: "width: 3em;" }
         .control-group
+          %p.in-progress.hide Creating your account now. This may take a minute or two...
           .controls
             = f.submit "Submit", class: "submit_button", style: "width: inherit;"
