--- a/app/views/evaluations/_form.html.haml
+++ b/app/views/evaluations/_form.html.haml
@@ -30,7 +30,7 @@
             %div.tips
               %h5 
                 %img{ alt: "Lightbulb", src: LIGHT_BULB_URL }
-                Your company name and the position title will be displayed to candidates when they take your evaluation.
+                Your company name and the position title will be displayed to candidates when they take your Evaluation.
             %div.control-group
               %div.controls    
                 = f.text_field :company, autofocus: "autofocus", style: "padding: 4px; width: 300px; font-size: 15px; text-align: center;", placeholder: "Company Name"
@@ -38,13 +38,13 @@
                 - if false
                   %div{style: "margin-top:10px;"} Upload job description (optional)
           %div.action_group
-            %h3 What challenges do you want to use?
+            %h3 Which Challenges would you like to use?
             %div.tips
               %h5 
                 %img{ alt: "Lightbulb", src: LIGHT_BULB_URL }
-                Choose up to five challenges total. Each challenge takes less than 15 minutes to complete.
+                Choose up to five Challenges total. Each Challenge should take less than 15 minutes to complete.
             .challenge_chooser
-              %h5 MetaBright Skills
+              %h5 MetaBright Challenges
               .challenges
                 %ul.checklist.metabright-challenges
                   - @public_paths.each do |p|
@@ -53,7 +53,7 @@
                         = check_box_tag "evaluation[selected_paths][#{p.id}]", 1, @evaluation_path_ids.include?(p.id)
                         = p.name
             .challenge_chooser
-              %h5 Your Custom Skills
+              %h5 Your Custom Challenges
               .challenges
                 - if @group_paths.any?
                   %ul.checklist.custom-challenges
@@ -66,7 +66,7 @@
                       = link_to "Create new custom skill.", new_group_path_path
                 - else
                   %p 
-                    You don't have any custom skills. 
+                    You don't have any custom Challenges. 
                     = link_to "Create one now.", new_group_path_path
             
               
