--- a/app/views/evaluations/take.html.haml
+++ b/app/views/evaluations/take.html.haml
@@ -37,7 +37,7 @@
               = link_to "/auth/google_oauth2", style: "display: inline-block; margin-right: 10px; margin-bottom: 0;", class: "button btn" do
                 = image_tag ICON_LOGIN_GOOGLE, alt: "Google sign up"
                 %span.landingbuttontext Google sign up »
-              = link_to "/auth/linkedin_oauth2", style: "display: inline-block; margin: 0 18px;", class: "button btn" do
+              = link_to "/auth/linkedin", style: "display: inline-block; margin: 0 18px;", class: "button btn" do
                 = image_tag ICON_LOGIN_LINKEDIN, alt: "LinkedIn sign up"
                 %span.landingbuttontext LinkedIn sign up »
               = link_to "/auth/github", style: "display: inline-block; margin-left: 10px;", class: "button btn" do
