--- a/app/views/modals/_login.html.haml
+++ b/app/views/modals/_login.html.haml
@@ -29,7 +29,7 @@
         %div{style: "background-image: url(#{ICON_DIVIDER_URL}); background-repeat:no-repeat; background-position: center 10px; width:234px; margin:10px auto; "}
         
         %div
-          = link_to "/auth/linkedin_oauth2", class: "btn danger", style: "width:205px;" do
+          = link_to "/auth/linkedin", class: "btn danger", style: "width:205px;" do
             = image_tag ICON_LOGIN_LINKEDIN, style: "height:30px;", alt: "LinkedIn"
             %span.landingbuttontext Sign in with LinkedIn »
         
