--- a/app/views/pages/portal.html.haml
+++ b/app/views/pages/portal.html.haml
@@ -35,7 +35,7 @@
           = link_to "/auth/google_oauth2", style: "margin-top: 10px;", class: "button btn" do
             = image_tag ICON_LOGIN_GOOGLE, alt: "Google sign up"
             %span.landingbuttontext Google sign up »
-          = link_to "/auth/linkedin_oauth2", class: "button btn" do
+          = link_to "/auth/linkedin", class: "button btn" do
             = image_tag ICON_LOGIN_LINKEDIN, alt: "LinkedIn sign up"
             %span.landingbuttontext LinkedIn sign up »
           = link_to "/auth/github", class: "button btn" do
