--- a/app/views/evaluations/_table.html.haml
+++ b/app/views/evaluations/_table.html.haml
@@ -8,10 +8,14 @@
             %img.challenge_img{ src: path.picture, style: "width: 25px; height: 25px;", title: path.name, alt: path.name }
         %td{ style: "width: 30%; overflow: hidden" }= take_group_evaluation_url(e.permalink)
         %td{ style: "text-align: center; "}= e.evaluation_enrollments.count.to_s + " users"
-        %td.gear{ style: "padding: 15px 5px; width: 20px;"}
+        %td.gear
           = link_to edit_group_evaluation_path(@group, e) do
             %div{ "data-tip" => "Edit" }
               %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/gear_dark_small.png", alt: "Edit"}
+        %td.gear
+          = link_to "#" do
+            %div{ "data-tip" => "Delete" }
+              %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/trash.png", alt: "Delete"}
     - if @evaluations.empty?
       %tr
         %td{ colspan: "5", style: "border-bottom: 0; font-size; 13px;" }
