--- a/app/views/evaluations/_table.html.haml
+++ b/app/views/evaluations/_table.html.haml
@@ -13,7 +13,7 @@
             %div{ "data-tip" => "Edit" }
               %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/gear_dark_small.png", alt: "Edit"}
         %td.gear
-          = link_to delete_group_evaluation_path(@group, e) do
+          = link_to group_evaluation_path(@group, e), method: :delete, confirm: "Are you sure you want to delete this Evaluation? This action is irreversible." do
             %div{ "data-tip" => "Delete" }
               %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/trash.png", alt: "Delete"}
     - if @evaluations.empty?
