--- a/app/views/evaluations/_table.html.haml
+++ b/app/views/evaluations/_table.html.haml
@@ -7,7 +7,13 @@
           - e.paths.each do |path|
             %img.challenge_img{ src: path.picture, style: "width: 25px; height: 25px;", title: path.name, alt: path.name }
         %td{ style: "width: 30%; overflow: hidden" }= take_group_evaluation_url(e.permalink)
-        %td{ style: "text-align: center; "}= e.evaluation_enrollments.count.to_s + " users"
+        %td{ style: "text-align: center; "}
+          = e.evaluation_enrollments.where("submitted_at IS NOT NULL").count.to_s
+          - if e.evaluation_enrollments.where("submitted_at IS NOT NULL").count == 1 
+            user
+          - else 
+            users
+        / %td{ style: "text-align: center; "}= e.evaluation_enrollments.count.to_s + " users"
         %td.gear
           = link_to edit_group_evaluation_path(@group, e) do
             %div{ "data-tip" => "Edit" }
