tt on quoted text

--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -1765,6 +1765,19 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
   }
 }
 
+/* Challenge Editor Tooltips */
+
+.quoted_text_tt {
+  display: inline-block;
+  position: relative;
+  bottom: 3px; 
+  
+  [data-tip]:after { left: -36px; white-space: normal; height: 90px; width: 184px; top: -107px; }
+  [data-tip]:before { left: 3px; }
+  
+}
+
+
 /*.navbar-inner { background-image: none !important; background-color: #406B9B !important; }*/
 /*body { background-image: url(http://d1c739w2xm33i4.cloudfront.net/2.2/top_image.jpg) }*/
 /*.navbar .old-brand { display: none; }
