--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -1776,6 +1776,14 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
   [data-tip]:before { left: 3px; }
   
 }
+.cr_template_tt {
+  display: inline-block;
+  position: relative;
+  bottom: 3px; 
+  
+  [data-tip]:after { left: -36px; white-space: normal; height: 107px; width: 207px; top: -124px; }
+  [data-tip]:before { left: 3px; }
+}
 
 
 /*.navbar-inner { background-image: none !important; background-color: #406B9B !important; }*/
