--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -72,6 +72,9 @@
               %label.control-label Template (optional)
               .controls{ style: "margin-top: 6px;" }
                 %a.show_template{ onclick: "$(this).hide(); $(this).siblings('div').show();", style: (task.template.blank? ? "" :  "display: none;") } Add template for question
+                .cr_template_tt
+                  %div{ "data-tip" => "Text you include in the template will be supplied to the user in their editable answer field. Templates are useful to guide what format you'd like a response in. They can also be used to give the user something to edit, improve, or build upon."}
+                    %img{src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/tooltip_light.png"}
                 = text_area_tag "task[template]", task.template, class: "hidden_text_area", style: "display: none;"
                 %div{ id: template_id, class: "ace_editor", style:"width: 97%; margin: 0 auto 5px auto; min-height: 175px; position: relative; padding-top:0; #{task.template.blank? ? "display: none;" :  ""}"} 
         
