--- a/app/views/paths/edit.html.haml
+++ b/app/views/paths/edit.html.haml
@@ -136,5 +136,5 @@
                           %span#question_counter #{s.achievement_tasks.size} Achievements
                         - unless s.published_at
                           %span.label.warning{ style: "font-size: 12px; vertical-align:middle; background-color: #0069D6;" } draft
-                %div.section_questions_container.row{ style: "display:none; margin-top: 20px;" }
+                %div.section_questions_container.row{ style: "display:none;" }
                   = render "sections/edit_tasks", { section: s, tasks: s.tasks, display_new_task_form: true }
